--- a/src/static/style.css
+++ b/src/static/style.css
@@ -6,3 +6,13 @@
 body {
     background-color: #f0f0f0;
 }
+
+#chatHistory {
+    height: 100px;
+    width: 400px;
+    overflow-y: scroll;
+}
+
+#chatInput {
+    width: 200px;
+}
