--- a/src/static/style.css
+++ b/src/static/style.css
@@ -7,12 +7,32 @@ body {
     background-color: #f0f0f0;
 }
 
+.mainUI {
+    width: 100%;
+}
+
+.mainPanel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.subPanel {
+    padding: 1rem;
+}
+
+.middleSubPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #chatHistory {
-    height: 100px;
-    width: 400px;
+    height: 5rem;
+    width: 25rem;
     overflow-y: scroll;
 }
 
 #chatInput {
-    width: 200px;
+    width: 15rem;
 }
