--- a/src/static/style.css
+++ b/src/static/style.css
@@ -14,7 +14,7 @@ body {
 .mainPanel {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .subPanel {
